--- a/v2/index.html
+++ b/v2/index.html
@@ -24,7 +24,7 @@
             background-color: white;
         }
 
-        .mc-border {
+        .card {
             border: 1px double #efefef
         }
     </style>
@@ -51,11 +51,6 @@
                 Microconfig is intended to make it easy and convenient to manage configuration for microservices (or
                 just for a big amount of services) and reuse the common part
             </p>
-            <p>
-                <a href="#" class="btn btn-primary my-2">Download</a>
-                <a href="#" class="btn btn-secondary my-2">Full documentation</a>
-                <a href="#" class="btn btn-secondary my-2">Get started</a>
-            </p>
         </div>
     </section>
 
@@ -64,6 +59,20 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal mc-color">#Include</h4>
+                </div>
+                <div class="card-body">
+                    To include a component's configuration you need to specify only the component name, you don't need
+                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
+                    with the component's name and include the configuration from its files (if the folder name is not
+                    unique,
+                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                    unique).
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal mc-color">Placeholders</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
