--- a/v2/index.html
+++ b/v2/index.html
@@ -15,6 +15,15 @@
 
     <link href="css/styles.css" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: bloggerBold;
+            src: url('../bloggersans/Bloggersansbold.ttf') format('truetype');
+        }
+
+        body {
+
+        }
+
         .shadow-sm {
             box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .035) !important;
         }
@@ -29,7 +38,8 @@
         }
 
         .card {
-            border: 1px double #efefef
+            border: 1px double #efefef;
+            font-weight: 300;
         }
 
         .card-header {
@@ -47,7 +57,7 @@
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
                 <img src="css/logo.svg" style="width:70px" alt="Microconfig"/>
-                <strong class="mc-color">Microconfig</strong>
+                <strong class="mc-color" style="font-family: bloggerBold">Microconfig</strong>
             </a>
         </div>
     </div>
@@ -70,7 +80,7 @@
         <div class="container" style="padding: 0">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal mc-color">#Include</h4>
+                    <h4 class="my-0  mc-color">#Includes</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -84,7 +94,7 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal mc-color">Placeholders</h4>
+                    <h4 class="my-0  mc-color">${Placeholders}</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -98,7 +108,35 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal mc-color">Expression language</h4>
+                    <h4 class="my-0  mc-color">#{Expression language}</h4>
+                </div>
+                <div class="card-body">
+                    To include a component's configuration you need to specify only the component name, you don't need
+                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
+                    with the component's name and include the configuration from its files (if the folder name is not
+                    unique,
+                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                    unique).
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h4 class="my-0  mc-color">Environment specific configs</h4>
+                </div>
+                <div class="card-body">
+                    To include a component's configuration you need to specify only the component name, you don't need
+                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
+                    with the component's name and include the configuration from its files (if the folder name is not
+                    unique,
+                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                    unique).
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h4 class="my-0  mc-color">Templates</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
