--- a/v2/index.html
+++ b/v2/index.html
@@ -29,7 +29,7 @@
         }
 
         .navbar-brand {
-            font-size: 2.25rem;
+            font-size: 2.5rem;
         }
 
         .card-header {
@@ -56,7 +56,7 @@
     <div class="navbar shadow-sm" s>
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
-                <img src="css/logo.svg" style="width:70px" alt="Microconfig"/>
+                <img src="css/logo.svg" style="width:80px" alt="Microconfig"/>
                 <strong class="mc-color" style="font-family: bloggerBold">Microconfig</strong>
             </a>
         </div>
@@ -65,8 +65,8 @@
 
 <main role="main">
     <section class="jumbotron">
-        <div class="container" style="padding: 0 15px">
-            <h1>Overview & Features</h1>
+        <div class="container">
+            <h1>Microservice configuration made easy</h1>
             <p class="lead ">
                 Microconfig is intended to make it easy and convenient to manage configuration for microservices (or
                 just for a big amount of services) and reuse the common part.
