--- a/v2/index.html
+++ b/v2/index.html
@@ -29,7 +29,7 @@
         }
 
         .navbar-brand {
-            font-size: 2.5rem;
+            font-size: 2.8rem;
         }
 
         .card-header {
@@ -57,7 +57,7 @@
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
                 <img src="css/logo.svg" style="width:80px" alt="Microconfig"/>
-                <strong class="mc-color" style="font-family: bloggerBold">Microconfig</strong>
+                <strong class="mc-color" style="font-family: bloggerBold">MicroConfig</strong>
             </a>
         </div>
     </div>
@@ -80,7 +80,7 @@
         <div class="container" style="padding: 0">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0  mc-color">#Includes</h4>
+                    <h4 class="my-0 mc-color">#Includes</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -94,7 +94,7 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0  mc-color">${Placeholders}</h4>
+                    <h4 class="my-0 mc-color">${Placeholders}</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -108,7 +108,7 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0  mc-color">#{Expression language}</h4>
+                    <h4 class="my-0 mc-color">#{Expression language}</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -122,7 +122,7 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0  mc-color">Environment specific configs</h4>
+                    <h4 class="my-0 mc-color">Environment specific configs</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
@@ -136,7 +136,7 @@
 
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="my-0  mc-color">Templates</h4>
+                    <h4 class="my-0 mc-color">Templates</h4>
                 </div>
                 <div class="card-body">
                     To include a component's configuration you need to specify only the component name, you don't need
