--- a/v2/index.html
+++ b/v2/index.html
@@ -53,7 +53,7 @@
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
                 <img src="css/logo.svg" style="width:80px" alt="Microconfig"/>
-                <strong class="mc-color" style="font-family: bloggerBold">MicroConfig</strong>
+                <strong class="mc-color" style="font-family: bloggerBold">Microconfig</strong>
             </a>
         </div>
     </div>
