--- a/v2/index.html
+++ b/v2/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
 <header>
-    <div class="navbar shadow-sm" s>
+    <div class="navbar shadow-sm">
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
                 <img src="css/logo.svg" style="width:80px" alt="Microconfig"/>
