--- a/v2/index.html
+++ b/v2/index.html
@@ -83,7 +83,7 @@
             </a>
         </div>
 
-        <a href="https://https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
+        <a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
             <svg width="80" height="80" viewBox="0 0 250 250"
                  style="fill:#5fbb92; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                 <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
