--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
 
 <article style="width: 80%; margin: 0 auto; background-color: white">
     <article style="border-bottom: 1px double; height: 100px; color: #efefef">
-        <img src="v2/css/logo.svg" style="width: 100px;float: left"><span
+        <img src="logo.svg" style="width: 100px;float: left"><span
             style="float:left;font-size: 3.2rem; margin-top: 36px; left: 30px; padding: 0;color: #5fbb92;font-family: bloggerBold">Microconfig</span>
     </article>
 
