--- a/documentation.html
+++ b/documentation.html
@@ -15,10 +15,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
 
-    <title>Microconfig.io - powerful tool for microservice configuration management</title>
+    <title>Microconfig.io - best tool for microservice configuration management</title>
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
-    <meta content="Microconfig - powerful tool for microservice configuration management" name="description">
+    <meta content="Microconfig - best tool for microservice configuration management" name="description">
     <link rel="icon" href="css/favicon.ico">
 
     <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
