--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
-    <meta content="Microconfig - best tool for microservice configuration management" name="description">
+    <meta content="Microconfig - Microservice configuration made easy" name="description">
     <title>Microconfig.io - best tool for microservice configuration management</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
