--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137858449-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'UA-137858449-1');
@@ -28,6 +32,10 @@
         @font-face {
             font-family: bloggerBold;
             src: url('bloggersans/Bloggersansbold.ttf') format('truetype');
+        }
+
+        .container {
+            padding: 0;
         }
 
         .shadow-sm {
@@ -95,7 +103,8 @@
 
         <a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
             <svg width="80" height="80" viewBox="0 0 250 250"
-                 style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100" aria-hidden="true">
+                 style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100"
+                 aria-hidden="true">
                 <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                 <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
                       fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -120,7 +129,12 @@
     </section>
 
     <div class="py-5 bg-light">
-        <div class="container" style="padding: 0">
+        <div class="container" style="padding: 0; margin-bottom: 1.5rem">
+            <h2>
+                Main features:
+            </h2>
+        </div>
+        <div class="container">
             <div class="card mb-4">
                 <div class="card-header">
                     <h4 class="my-0 mc-color">#Includes</h4>
