--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
-    <title>Microconfig.io - best tool for microservice configuration management</title>
+    <title>Microconfig.io - modern tool for microservice configuration management</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
