--- a/index.html
+++ b/index.html
@@ -143,73 +143,132 @@
             </h2>
         </div>
         <div class="container">
-            <div class="card mb-4">
-                <div class="card-header">
-                    <h4 class="my-0 mc-color">#Includes</h4>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">#Includes</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
-                    To include a component's configuration you need to specify only the component name, you don't need
-                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
-                    with the component's name and include the configuration from its files (if the folder name is not
-                    unique,
-                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
-                    unique).
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">#{Placeholders}</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="card mb-4">
-                <div class="card-header">
-                    <h4 class="my-0 mc-color">${Placeholders}</h4>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">#{Expression language}</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
-                    To include a component's configuration you need to specify only the component name, you don't need
-                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
-                    with the component's name and include the configuration from its files (if the folder name is not
-                    unique,
-                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
-                    unique).
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">Environment specific configs</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="card mb-4">
-                <div class="card-header">
-                    <h4 class="my-0 mc-color">#{Expression language}</h4>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">Templates</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
-                    To include a component's configuration you need to specify only the component name, you don't need
-                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
-                    with the component's name and include the configuration from its files (if the folder name is not
-                    unique,
-                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
-                    unique).
-                </div>
-            </div>
-
-            <div class="card mb-4">
-                <div class="card-header">
-                    <h4 class="my-0 mc-color">Environment specific configs</h4>
-                </div>
-                <div class="card-body">
-                    To include a component's configuration you need to specify only the component name, you don't need
-                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
-                    with the component's name and include the configuration from its files (if the folder name is not
-                    unique,
-                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
-                    unique).
-                </div>
-            </div>
-
-            <div class="card mb-4">
-                <div class="card-header">
-                    <h4 class="my-0 mc-color">Templates</h4>
-                </div>
-                <div class="card-body">
-                    To include a component's configuration you need to specify only the component name, you don't need
-                    to specify its path. This makes the config layout refactoring easier. Microconfig will find a folder
-                    with the component's name and include the configuration from its files (if the folder name is not
-                    unique,
-                    Microconfig includes configs from each folder, but it's a good idea to keep a component name
-                    unique).
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="my-0 mc-color">Simplicity</h4>
+                        </div>
+                        <div class="card-body">
+                            To include a component's configuration you need to specify only the component name, you
+                            don't
+                            need
+                            to specify its path. This makes the config layout refactoring easier. Microconfig will find
+                            a
+                            folder
+                            with the component's name and include the configuration from its files (if the folder name
+                            is
+                            not
+                            unique,
+                            Microconfig includes configs from each folder, but it's a good idea to keep a component name
+                            unique).
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
