--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
 
         .card {
-            border: 1px double #efefef;
+            border: 0;
             font-weight: 300;
         }
 
@@ -139,7 +139,7 @@
     <div class="py-5 bg-light">
         <div class="container" style="padding: 0; margin-bottom: 1.5rem">
             <h2>
-                Main features:
+                Main features
             </h2>
         </div>
         <div class="container">
