--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="#">Get Started</a>
+                <a class="p-2 text-dark" href="#">Quickstart</a>
                 <a class="p-2 text-dark" href="#">Documentation</a>
                 <a class="p-2 text-dark" href="#">Download</a>
                 <a class="p-2 text-dark" href="#">IDEA plugin</a>
@@ -128,10 +128,9 @@
         <div class="container">
             <h1>Microservice configuration made easy</h1>
             <p class="lead ">
-                Microconfig is intended to make it easy and convenient to manage configuration for microservices (or
-                just for a big amount of services) and reuse the common part.
-                Microconfig is intended to make it easy and convenient to manage configuration for microservices (or
-                just for a big amount of services) and reuse the common part
+                <br>Configure common and specific parts for different microservices or for the same microservice on different environments <b>WITHOUT COPY&PASTE</b>.
+                <br><br>Use placeholders and powerful expression language for dynamic properties.
+                <br><br>Support yaml and properties format.
             </p>
         </div>
     </section>
@@ -252,7 +251,7 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Simplicity</h4>
+                            <h4 class="my-0 mc-color">Yaml & Properties support</h4>
                         </div>
                         <div class="card-body">
                             To include a component's configuration you need to specify only the component name, you
