--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="py-5 bg-light">
         <div class="container" style="padding: 0; margin-bottom: 1.5rem">
             <h2>
-                Main features
+               What Microconfig can do
             </h2>
         </div>
         <div class="container">
