--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">${Placeholders}</h4>
+                            <h4 class="my-0 mc-color">${Place@holders}</h4>
                         </div>
                         <div class="card-body">
                             Instead of duplicating the value of some properties you can use a reference to this value.
@@ -168,7 +168,7 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">#{Expression language}</h4>
+                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>
                         </div>
                         <div class="card-body">
                             If #include and ${placeholders} is not enough you can use powerful expression language for
