--- a/index.html
+++ b/index.html
@@ -203,12 +203,10 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Yaml & Properties support</h4>
+                            <h4 class="my-0 mc-color">Config diff</h4>
                         </div>
                         <div class="card-body">
-                            Microconfig supports *.yaml and *.properties format for source and result configuration
-                            files.
-                            You can keep a part of configuration in *.yaml files and another part in *.properties.
+                           ..todo
                         </div>
                     </div>
                 </div>
