--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
                             <h4 class="my-0 mc-color">Config diff</h4>
                         </div>
                         <div class="card-body">
-                           ..todo
+                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.
+                            <br><br>
                         </div>
                     </div>
                 </div>
@@ -218,7 +219,7 @@
 
 <footer class="text-muted">
     <div class="container">
-        Microconfig.io © 2020
+        Microconfig.io © 2017-2020
     </div>
 </footer>
 
