--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="#">Quickstart</a>
-                <a class="p-2 text-dark" href="#">Documentation</a>
-                <a class="p-2 text-dark" href="#">Download</a>
-                <a class="p-2 text-dark" href="#">IDEA plugin</a>
-                <a class="p-2 text-dark" href="#">Contacts</a>
+                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
+                <a class="p-2 text-dark" href="documentation.html">Documentation</a>
+                <a class="p-2 text-dark" href="download.html">Download</a>
+                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="contacts.html">Contacts</a>
             </nav>
         </div>
     </div>
@@ -214,7 +214,6 @@
             </div>
         </div>
     </div>
-
 </main>
 
 <footer class="text-muted">
