--- a/index.html
+++ b/index.html
@@ -123,15 +123,50 @@
     </svg>
 </a>
 
-<main role="main">
+<main role="main" id="idea-plugin">
     <section class="jumbotron">
         <div class="container">
-            <h1>Microservice configuration made easy</h1>
-            <p class="lead ">
-                <br>Configure common and specific parts for different microservices or for the same microservice on
-                different environments <b>WITHOUT COPY&PASTE</b>.
-                <br><br>Use placeholders and powerful expression language for dynamic properties.
-                <br><br>Support yaml and properties format.
+            <h1>Microconfig IntelliJ IDEA plugin</h1>
+            <p class="lead">
+                IntelliJ IDEA plugin for Microconfig that allows navigating to #include and placeholders' sources,
+                resolving placeholders and other useful stuff.
+            </p>
+
+            <p class="lead">Installation</p>
+            <p>
+                Install plugin by name Microconfig.io from Idea Settings -> Plugins -> Marketplace
+
+                Or download plugin zip file from https://plugins.jetbrains.com/plugin/12064-microconfig-io and import it
+                via
+                Settings -> Plugins -> Install plugin from disk...
+            </p>
+
+            <p class="lead">Plugin usage</p>
+            <p>
+                Plugin adds it's submenu in Main Menu -> Tools -> Microconfig. Also the same menu appears in RightClick
+                menu.
+
+                Microconfig has two actions:
+
+                Jump to component (F10)
+                Resolve placeholder (Ctrl-F10 / Command-F10)
+            </p>
+            <p class="lead">Jump to component</p>
+            <p>
+                Jump to component supports navigation from #include component line. Once chosen from the menu or on the
+                hotkey press it will try to find component in 'components' directory and open the corresponding file
+                inside.
+
+                Also it can jump to a component referenced in a placeholder like ${component@key}. To choose a
+                placeholder just place your cursor inside {}. On Jump it will try to find component file and then a line
+                with key inside it. Once found it will open that file and place cursor on key line.
+            </p>
+            <p class="lead">
+                Resolve placeholder
+                Resolve placeholder supports two modes.
+
+                If activated with cursor on a property' key it will try to resolve the whole property and show values
+                grouped by env names in a small hint.
             </p>
         </div>
     </section>
@@ -206,7 +241,8 @@
                             <h4 class="my-0 mc-color">Config diff</h4>
                         </div>
                         <div class="card-body">
-                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.
+                            Microconfig can detect added/removed/changed properties for each service and store this
+                            information after every config build.
                             <br><br>
                         </div>
                     </div>
@@ -215,6 +251,290 @@
         </div>
     </div>
 </main>
+
+<!--<main role="main" id="download">-->
+<!--    <section class="jumbotron">-->
+<!--        <div class="container">-->
+<!--            <h1>Download</h1>-->
+<!--            <p class="lead">-->
+<!--                You can download standalone Microconfig CLI from-->
+<!--                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">Maven Central</a> or-->
+<!--                <a href="https://github.com/microconfig/microconfig/releases">Github releases</a>.-->
+<!--            </p>-->
+<!--            <p class="lead">-->
+<!--                If you want to add Microconfig-core as dependency to your Java project-->
+<!--                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">this Maven artifact</a>.-->
+<!--            </p>-->
+
+<!--            <p class="lead">-->
+<!--                See documentation how to-->
+<!--                <a href="http://localhost:63342/site/documentation.html#/?id=running-the-config-build">run config build via CLI</a>.-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </section>-->
+
+<!--    <div class="py-5 bg-light">-->
+<!--        <div class="container" style="padding: 0; margin-bottom: 1.5rem">-->
+<!--            <h2>-->
+<!--                What Microconfig can do-->
+<!--            </h2>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#Includes</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            You can extract common part for different microservices to a dedicated component and then-->
+<!--                            reuse it via #include-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">${Place@holders}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Instead of duplicating the value of some properties you can use a reference to this value.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            If #include and ${placeholders} is not enough you can use powerful expression language for-->
+<!--                            dynamic properties-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Environment specific configs</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            For each microservice you can write common configuration for all environment and specify-->
+<!--                            environment specific properties (add/remove/override).-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Templates</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig allows you to keep configuration files for any libraries in their specific-->
+<!--                            format and resolve placeholders inside them.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Config diff</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
+
+<!--<main role="main" id="contacts">-->
+<!--    <section class="jumbotron">-->
+<!--        <div class="container">-->
+<!--            <h1>Contacts</h1>-->
+<!--            <p class="lead">Join our <a href="https://join.slack.com/t/microconfig/shared_invite/zt-couuwwuo-vt5miXcv5RMmuXlNv1oKEQ">Slack!</a></p>-->
+<!--            <p class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></p>-->
+<!--            <p class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></p>-->
+<!--        </div>-->
+<!--    </section>-->
+
+<!--    <div class="py-5 bg-light">-->
+<!--        <div class="container" style="padding: 0; margin-bottom: 1.5rem">-->
+<!--            <h2>-->
+<!--                What Microconfig can do-->
+<!--            </h2>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#Includes</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            You can extract common part for different microservices to a dedicated component and then-->
+<!--                            reuse it via #include-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">${Place@holders}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Instead of duplicating the value of some properties you can use a reference to this value.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            If #include and ${placeholders} is not enough you can use powerful expression language for-->
+<!--                            dynamic properties-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Environment specific configs</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            For each microservice you can write common configuration for all environment and specify-->
+<!--                            environment specific properties (add/remove/override).-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Templates</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig allows you to keep configuration files for any libraries in their specific-->
+<!--                            format and resolve placeholders inside them.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Config diff</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
+
+<!--<main role="main" id="main">-->
+<!--    <section class="jumbotron">-->
+<!--        <div class="container">-->
+<!--            <h1>Microservice configuration made easy</h1>-->
+<!--            <p class="lead ">-->
+<!--                <br>Configure common and specific parts for different microservices or for the same microservice on-->
+<!--                different environments <b>WITHOUT COPY&PASTE</b>.-->
+<!--                <br><br>Use placeholders and powerful expression language for dynamic properties.-->
+<!--                <br><br>Support yaml and properties format.-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </section>-->
+
+<!--    <div class="py-5 bg-light">-->
+<!--        <div class="container" style="padding: 0; margin-bottom: 1.5rem">-->
+<!--            <h2>-->
+<!--                What Microconfig can do-->
+<!--            </h2>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#Includes</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            You can extract common part for different microservices to a dedicated component and then-->
+<!--                            reuse it via #include-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">${Place@holders}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Instead of duplicating the value of some properties you can use a reference to this value.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            If #include and ${placeholders} is not enough you can use powerful expression language for-->
+<!--                            dynamic properties-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Environment specific configs</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            For each microservice you can write common configuration for all environment and specify-->
+<!--                            environment specific properties (add/remove/override).-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Templates</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig allows you to keep configuration files for any libraries in their specific-->
+<!--                            format and resolve placeholders inside them.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="card mb-4">-->
+<!--                        <div class="card-header">-->
+<!--                            <h4 class="my-0 mc-color">Config diff</h4>-->
+<!--                        </div>-->
+<!--                        <div class="card-body">-->
+<!--                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.-->
+<!--                            <br><br>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
 
 <footer class="text-muted">
     <div class="container">
